# X402_PayPerUseAi_Casper-Hackathon

./: .gitignore  PROJECT_CONTEXT.md  README.md  analyze_survey.py  make_history.py  migrate_docs.py  old_home_temp.jsx  old_home_utf8.jsx  survey_summary.json
docs/: ARCHITECTURE.md  architecture_doc.md  business_model.md  business_whitepaper.md  repo_setup_guide.md  smart_contract_docs.md  technical_due_diligence.md
scripts/: check_balance.py  deploy_token.py  find_25.py  find_missing.py  generate.py  recover_mnemonic.py  scratch_check_db.py  scratch_find_app.py  scratch_find_app_v2.py  scratch_inspect_tx.py  setup_wallet.py  test_mnemonic.py
scripts/deploy_workspace/: cep18_new.wasm  deploy.js  deploy_legacy.js  deployment_result.txt  extract.js  find_key_path.js  package-lock.json  package.json
smart-contracts/: build.py  deploy_config.py  pyproject.toml  requirements.txt  sim_test.py
smart-contracts/artifacts/: PayPerAI.approval.puya.map  PayPerAI.arc56.json
smart-contracts/smart_contracts/pay_per_ai/: PayPerAI.approval.puya.map  PayPerAI.approval.teal  PayPerAI.arc56.json  contract.py
smart-contracts/smart_contracts/pay_per_ai/artifacts/: PayPerAI.approval.teal  PayPerAI.arc32.json
smart-contracts/tests/: test_contract.py
src/backend/: .env.example  check_schema.py  deploy_raw.py  deploy_v2.py  fund_contract.py  migrate_db.py  register_services.py  requirements.txt  test_oracle.py
test-reports/: 100_Real_Users_Reviews.csv  100_Real_Users_Reviews.xlsx
tests/: Comprehensive_Unit_Test_Report.csv  Functional_Test_Report.csv  GUI_Test_Report.csv
(+80 files in other folders)
